--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -3,12 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rest-skeleton</artifactId>
         <groupId>org.seekay.skeleton.rest</groupId>
+        <artifactId>rest-skeleton</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
+    <name>DAO</name>
     <artifactId>dao</artifactId>
 
     <dependencies>
