--- a/model/pom.xml
+++ b/model/pom.xml
@@ -7,8 +7,8 @@
         <artifactId>rest-skeleton</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
     <name>Model</name>
     <artifactId>model</artifactId>
 
