--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,7 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
+    <name>Service</name>
     <artifactId>service</artifactId>
 
     <dependencies>
